[package]
name = "mlflow"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
nanoserde = "0.1.20"
thiserror = "1.0.22"
ureq = { version = "1.5.2", default-features=false, features=["tls"] }

[dev-dependencies]
nanorand = "0.4.4"
pico-args = "0.3.4"
