[package]
name = "mlflow"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"
description = "A client library for MLflow tracking"
repository = "https://github.com/finnerale/mlflow-rs"
license = "MIT"
keywords = ["logging", "tracking", "ml", "api"]
categories = ["api-bindings", "science", "visualization"]

[dependencies]
anyhow = "1.0.34"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde_qs = "0.8.4"
thiserror = "1.0.22"
ureq = { version = "1.5.2", default-features=false, features=["tls", "json"] }

[dev-dependencies]
nanorand = "0.4.4"
pico-args = "0.3.4"
